--- a/Overpoort.ipynb
+++ b/Overpoort.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -143,14 +143,18 @@
       "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
       "\u001b[0m\n",
       "\u001b[34m  Local URL: \u001b[0m\u001b[1mhttp://localhost:8501\u001b[0m\n",
-      "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.17.94.55:8501\u001b[0m\n",
+      "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://192.168.0.155:8501\u001b[0m\n",
       "\u001b[0m\n",
       "\u001b[34m\u001b[1m  For better performance, install the Watchdog module:\u001b[0m\n",
       "\n",
       "  $ xcode-select --install\n",
       "  $ pip install watchdog\n",
       "            \u001b[0m\n",
-      "/Users/louisvyvey/Documenten/UGENT/Complexity Economics/Assignment_2/Overpoort/BasicModel.py:100: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "/Users/louisvyvey/Documenten/UGENT/Complexity Economics/Assignment_2/Overpoort/BasicModel.py:99: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  fig, ax = plt.subplots(figsize=(6, 6))\n",
+      "/Users/louisvyvey/Documenten/UGENT/Complexity Economics/Assignment_2/Overpoort/BasicModel.py:99: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  fig, ax = plt.subplots(figsize=(6, 6))\n",
+      "/Users/louisvyvey/Documenten/UGENT/Complexity Economics/Assignment_2/Overpoort/BasicModel.py:99: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  fig, ax = plt.subplots(figsize=(6, 6))\n",
       "^C\n",
       "\u001b[34m  Stopping...\u001b[0m\n",
